--- a/CudaModule/CudaModule.vcxproj
+++ b/CudaModule/CudaModule.vcxproj
@@ -153,6 +153,9 @@
     <ClCompile Include="src\CudaCore.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MemoryData\MemoryData.vcxproj">
+      <Project>{89d8988d-305b-4f68-86e5-fca1a45e2cea}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Nexus\Nexus.vcxproj">
       <Project>{259b6ce9-153e-4e25-9c1c-534d53be2c67}</Project>
     </ProjectReference>
