--- a/Nexus/nexus.props
+++ b/Nexus/nexus.props
@@ -11,7 +11,7 @@
         $(BOOST_ROOT)\;
         $(RXCPP_ROOT)\include\;
         $(SPDLOG_ROOT)\include\;
-        $(SolutionDir)..\MemoryData\;
+        $(SolutionDir)..\..\MemoryData\include\;
         $(ProjectDir)include\; <!-- Для своих .h в Nexus/include -->
         $(ProjectDir)\; <!-- Для своих .h в Nexus/include -->
         %(AdditionalIncludeDirectories)
