--- a/CudaModule/Cuda.props
+++ b/CudaModule/Cuda.props
@@ -10,11 +10,12 @@
       <AdditionalIncludeDirectories>
         <!-- Сначала зависимости верхнего уровня (Boost) -->
         $(BOOST_ROOT)\;
+        $(VCPKG_ROOT)\installed\x64-windows\include\;
+
         <!-- Потом CUDA -->
         $(CUDA_PATH)\include\;
         <!-- Потом наши проекты -->
 		  $(SolutionDir)..\Nexus\include\;
-		  $(SolutionDir)..\..\MemoryData\include\;
 		  $(ProjectDir)include\;
 		  $(ProjectDir)\;
 		  %(AdditionalIncludeDirectories)
@@ -24,11 +25,12 @@
       <!-- Пути к библиотекам -->
       <AdditionalLibraryDirectories>
         <!-- Пути к каталогам библиотек CUDA и Boost -->
-		  $(CUDA_PATH)\lib\x64\;
-		  $(BOOST_ROOT)\stage\lib\;
-		  $(SolutionDir)$(Platform)\$(Configuration)\; <!-- Где лежит MemoryData.lib -->
-		  %(AdditionalLibraryDirectories)
-	  </AdditionalLibraryDirectories>
+		    $(CUDA_PATH)\lib\x64\;
+		    $(BOOST_ROOT)\stage\lib\;
+		    $(SolutionDir)$(Platform)\$(Configuration)\; <!-- Где лежит MemoryData.lib -->
+        $([System.String]::Copy('%(AdditionalLibraryDirectories)').Contains('debug')) ? '$(VCPKG_ROOT)\installed\x64-windows\debug\lib' : '$(VCPKG_ROOT)\installed\x64-windows\lib';
+        %(AdditionalLibraryDirectories)
+      </AdditionalLibraryDirectories>
       <!-- Библиотеки для линковки -->
       <AdditionalDependencies>
         cudart_static.lib;
