--- a/TcudaApp/TcudaApp.vcxproj.filters
+++ b/TcudaApp/TcudaApp.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="~!Новая структура.txt" />
+  </ItemGroup>
 </Project>
